add s3 as remote

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
     remote = myremote
 ['remote "myremote"']
-    url = C:\Users\LENOVO\AppData\Local\Temp
+    url = s3://myytcommentdvcbucket
