--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -73,3 +73,11 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
         run: |
           pytest scripts/test_load_model.py
+
+      - name: Run model signature test
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+        run: |
+          pytest scripts/test_model_signature.py
